Make link dead until it's ready

--- a/static/signin.html
+++ b/static/signin.html
@@ -4,7 +4,7 @@
     <title>Placeholder Title</title>
   </head>
   <body>
-    <a id="fitbit-oauth-link" href="#">Sign in with Fitbit</a>
+    <a id="fitbit-oauth-link">Sign in with Fitbit</a>
 
     <script src="static/jquery-1.9.0.js"></script>
     <script>
