--- a/static/signedin.html
+++ b/static/signedin.html
@@ -4,11 +4,24 @@
     <title>Signed in!</title>
   </head>
   <body>
-    <script src="static/jquery-1.9.0.js"></script>
+    <script src="jquery-1.9.0.js"></script>
     <script>
       window.onload = function() {
         console.log("Hey");
-      }
+        navigator.geolocation.getCurrentPosition(function(position) {
+          var myLongitude = position.coords.longitude;
+          var myLatitude = position.coords.latitude;
+
+          $.ajax({
+            type: "get",
+            url: "../foursquare-venues/" + myLatitude + "," + myLongitude + "," + "asianfood",
+            success: function(response) {
+              console.log("success: " + response.results);
+            },
+            dataType: "json"
+          });
+        });
+      };
     </script>
   </body>
 </html>
