Basic HTML/CSS for footer links

--- a/static/steps.html
+++ b/static/steps.html
@@ -29,8 +29,11 @@
         </ul>
       </div>
 
-      <div id="footer" class="box">
-        A Ted and Omer Production
+      <div id="footer">
+        <div class="tab">Home</div>
+        <div class="tab">Steps</div>
+        <div class="tab">Food</div>
+        <div class="tab">Activity</div>
       </div>
     </div>
   </body>
