--- a/static/fsvenues.html
+++ b/static/fsvenues.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>Foursquare Venues Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <style type="text/css">
+  html { height: 100% }
+  body { height: 100%; margin: 0; padding: 0 }
+  #map-canvas { height: 500px; width: 500px }
+  </style>
 </head>
 <body>
   <form action="javascript:getGeoAndSubmit()">
@@ -15,9 +20,17 @@
 
   </div>
 
-  <script src="jquery-1.9.0.js"></script>
+  <div id="map-canvas" style="width: 100%; height:100%">
 
-  <script>
+  </div>
+
+  <script src="jquery-1.9.0.js"></script>
+  <script type="text/javascript"
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtjE9cT2HWJpuf745-cYh7rP_E1CPRE-c&sensor=true">
+  </script>
+  <script src="gmapVenueDisplay.js"></script>
+
+  <script type="text/javascript">
 
   var g = {lat: 0, lon: 0};
 
@@ -41,8 +54,10 @@
         latitude: lat, 
         longitude: lon},
         url:"/foursquare-venues",
-        success: function(data){displayResults(data);}
-      });
+        success: function(data){
+          displayResults(data);
+          initGmap(lat, lon);}
+        });
   }
 
   function displayResults(data){
@@ -64,7 +79,7 @@
     var origins = "";
     var i = 0;
 
-console.log(venues);
+    console.log(venues);
     for(i = 0; i < venues.length; i++){
       queries = queries + venues[i].location.lat + ","
       + venues[i].location.lng + "|";
@@ -73,28 +88,28 @@ console.log(venues);
     queries = queries.substring(0, queries.length - 1);
 //    origins = origins.substring(0, origins.length - 1);
 
-    origins = origins + g.lat + "," + g.lon;
+origins = origins + g.lat + "," + g.lon;
 
-    $.ajax({
-      type:"get",
-      data:{queries:queries, 
-            origins:origins},
-      url:"/google-walking-distance",
-      success: function(data){
-        var results = JSON.parse(data.results);
-        var resultsDiv = $("#results");
-        resultsDiv.html("");
-        for(i = 0; i < venues.length; i++){
-          var newDiv = $("<div>");
-          newDiv.html(venues[i].name + ", Steps: " 
-                      + results.rows[0].elements[i].distance.text);
-          resultsDiv.append(newDiv);
-        }
+$.ajax({
+  type:"get",
+  data:{queries:queries, 
+    origins:origins},
+    url:"/google-walking-distance",
+    success: function(data){
+      var results = JSON.parse(data.results);
+      var resultsDiv = $("#results");
+      resultsDiv.html("");
+      for(i = 0; i < venues.length; i++){
+        var newDiv = $("<div>");
+        newDiv.html(venues[i].name + ", Steps: " 
+          + results.rows[0].elements[i].distance.text);
+        resultsDiv.append(newDiv);
       }
-    });
+    }
+  });
 
-  }
-  </script>
+}
+</script>
 </body>
 
 </html>
