Fitbit OAuth essentially working via local storage
We store user stuff in local storage so that when we get back from
Fitbit we still know who we're dealing with. Next up will be storing the
credentials in MongoDB I think.

--- a/static/signedin.html
+++ b/static/signedin.html
@@ -8,18 +8,34 @@
     <script>
       window.onload = function() {
         console.log("Hey");
+        $.ajax({
+          type: "get",
+          url: "finalize-fitbit-oauth",
+          data: {
+            oauthTokenSecret: localStorage["fitbitCompleter" + "oauthTokenSecret"],
+            callbackId: localStorage["fitbitCompleter" + "callbackId"]
+          },
+          success: function(response) {
+            if (response.success) {
+              console.log("Finalized!");
+            } else {
+              console.log(response.error);
+            }
+          }
+        });
+
         navigator.geolocation.getCurrentPosition(function(position) {
           var myLongitude = position.coords.longitude;
           var myLatitude = position.coords.latitude;
 
-          $.ajax({
+          /*$.ajax({
             type: "get",
             url: "../foursquare-venues/" + myLatitude + "," + myLongitude + "," + "asianfood",
             success: function(response) {
               console.log("success: " + response.results);
             },
             dataType: "json"
-          });
+          });*/
         });
       };
     </script>
