--- a/static/fsvenues.html
+++ b/static/fsvenues.html
@@ -16,15 +16,16 @@
     <input type="submit" value="Find Venues">
   </form>
 
-  <div id="results">
+  <ul id="results">
 
-  </div>
+  </ul>
 
   <div id="map-canvas" style="width: 100%; height:100%">
 
   </div>
 
   <script src="jquery-1.9.0.js"></script>
+  <script src="addTappableJQPlugin.js"></script>
   <script type="text/javascript"
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtjE9cT2HWJpuf745-cYh7rP_E1CPRE-c&sensor=true">
   </script>
@@ -33,6 +34,7 @@
   <script type="text/javascript">
 
   var g = {lat: 0, lon: 0};
+
 
   function getGeoAndSubmit(){
     navigator.geolocation.getCurrentPosition(submitFSVSearch);
@@ -71,45 +73,51 @@
       return a.location.distance - b.location.distance;
     });
 
+    g.sortedVenues = sortedVenues;
+
     getAndDisplayWalkingDistance(sortedVenues.slice(0,nEntries+1))
   }
 
   function getAndDisplayWalkingDistance(venues){
     var queries = "";
-    var origins = "";
+    var origins;
     var i = 0;
 
-    console.log(venues);
+    g.displayedVenues = venues;
+    
     for(i = 0; i < venues.length; i++){
       queries = queries + venues[i].location.lat + ","
       + venues[i].location.lng + "|";
     }
 
     queries = queries.substring(0, queries.length - 1);
-//    origins = origins.substring(0, origins.length - 1);
 
-origins = origins + g.lat + "," + g.lon;
+    origins = g.lat + "," + g.lon;
 
-$.ajax({
-  type:"get",
-  data:{queries:queries, 
-    origins:origins},
-    url:"/google-walking-distance",
-    success: function(data){
-      var results = JSON.parse(data.results);
-      var resultsDiv = $("#results");
-      resultsDiv.html("");
-      for(i = 0; i < venues.length; i++){
-        var newDiv = $("<div>");
-        newDiv.html(venues[i].name + ", Steps: " 
-          + results.rows[0].elements[i].distance.text);
-        resultsDiv.append(newDiv);
-      }
-    }
-  });
+    $.ajax({
+      type:"get",
+      data:{queries:queries, 
+        origins:origins},
+        url:"/google-walking-distance",
+        success: function(data){
+          var results = JSON.parse(data.results);
+          var resultsDiv = $("#results");
+          resultsDiv.html("");
+          for(i = 0; i < venues.length; i++){
+            var newDiv = $("<li>");
 
-}
-</script>
+            newDiv.attr("id", i);
+            newDiv.onButtonTap(markerHandler);
+
+            newDiv.html(venues[i].name + ", Steps: " 
+              + results.rows[0].elements[i].distance.text);
+            resultsDiv.append(newDiv);
+          }
+        }
+      });
+
+  }
+  </script>
 </body>
 
 </html>
