Fitbit OAuth finalization works with local storage
Aww yeah

--- a/static/signedin.html
+++ b/static/signedin.html
@@ -17,26 +17,28 @@
           },
           success: function(response) {
             if (response.success) {
-              console.log("Finalized!");
+              localStorage["fitbitCompleter" + "AccessToken"] = response.accessToken;
+              localStorage["fitbitCompleter" + "AccessTokenSecret"] = response.accessTokenSecret;
+              localStorage["fitbitCompleter" + "UserID"] = response.userId;
             } else {
               console.log(response.error);
             }
           }
         });
 
-        navigator.geolocation.getCurrentPosition(function(position) {
+        /*navigator.geolocation.getCurrentPosition(function(position) {
           var myLongitude = position.coords.longitude;
           var myLatitude = position.coords.latitude;
 
-          /*$.ajax({
+          $.ajax({
             type: "get",
             url: "../foursquare-venues/" + myLatitude + "," + myLongitude + "," + "asianfood",
             success: function(response) {
               console.log("success: " + response.results);
             },
             dataType: "json"
-          });*/
-        });
+          });
+        });*/
       };
     </script>
   </body>
