--- a/static/steps.html
+++ b/static/steps.html
@@ -36,6 +36,18 @@
         <div class="tab">Activity</div>
       </div>
     </div>
+
+    <script src="jquery-1.9.0.js"></script>
+    <script>
+      window.onload = function() {
+        /*$.ajax({
+          type: "get",
+          url: "get-steps-data"
+          // TODO
+        });*/
+      }
+    </script>
+
   </body>
 </html>
 
