sorted by steps
Threw in some infrastructure to make paging easy for displaying more
recommendations. Just need to integrate the JS with the steps html page

--- a/static/steps.html
+++ b/static/steps.html
@@ -58,6 +58,10 @@
               var goalSteps = response.goalSteps;
               var actualSteps = response.actualSteps;
               var stepsPerMile = response.stepsForMile;
+
+              localStorage.remainingSteps = goalSteps - actualSteps;
+              localStorage.stepsPerMile = stepsPerMile;
+
               $("#actualSteps").text(actualSteps);
               $("#remainingSteps").text(goalSteps - actualSteps);
               $("#goalSteps").text(goalSteps);
