--- a/static/fsvenues.html
+++ b/static/fsvenues.html
@@ -5,9 +5,17 @@
   <title>Foursquare Venues Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <style type="text/css">
+
   html { height: 100% }
+
   body { height: 100%; margin: 0; padding: 0 }
+
   #map-canvas { height: 500px; width: 500px }
+
+  .hidden{ visibility: hidden;}
+
+  .visible{ visibility: visible;}
+
   </style>
 </head>
 <body>
