--- a/static/fsvenues.html
+++ b/static/fsvenues.html
@@ -4,20 +4,9 @@
   <meta charset="UTF-8">
   <title>Foursquare Venues Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <style type="text/css">
-
-  html { height: 100% }
-
-  body { height: 100%; margin: 0; padding: 0 }
-
-  #map-canvas { height: 500px; width: 500px }
-
-  .hidden{ visibility: hidden;}
-
-  .visible{ visibility: visible;}
-
-  </style>
-</head>
+  <link rel="stylesheet" href="gmapsStyle.css" type="text/css">
+  
+  </head>
 <body>
   <form action="javascript:getGeoAndSubmit()">
     <input id="fsvQuery" type="text">
