Make links more button-y

--- a/static/steps.html
+++ b/static/steps.html
@@ -71,7 +71,7 @@
         if (response.success) {
           var goalSteps = response.goalSteps;
           var actualSteps = response.actualSteps;
-          var stepsPerMile = response.stepsForMile;
+          var stepsPerMile = response.stepsPerMile;
 
           localStorage.remainingSteps = goalSteps - actualSteps;
           localStorage.stepsPerMile = stepsPerMile;
