trying to get calorie display to work
strange error with temboo library, says it can find the foods path

--- a/static/steps.html
+++ b/static/steps.html
@@ -45,10 +45,10 @@
     </div>
 
     <div id="footer">
-      <div class="tab">Home</div>
-      <div class="tab">Steps</div>
-      <div class="tab">Food</div>
-      <div class="tab">Activity</div>
+      <div class="tab"><a href="signedin.html">Home</a></div>
+      <div class="tab"><a href="steps.html">Steps</a></div>
+      <div class="tab"><a href="calories.html">Calories</a></div>
+      <div class="tab"><a href="activity.html">Activity</a></div>
     </div>
   </div>
 
