--- a/static/signedin.html
+++ b/static/signedin.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Signed in!</title>
-  </head>
-  <body>
-    <script src="jquery-1.9.0.js"></script>
-    <script>
-      window.onload = function() {
-        console.log("Hey");
-        $.ajax({
-          type: "get",
-          url: "finalize-fitbit-oauth",
-          data: {
-            oauthTokenSecret: localStorage["fitbitCompleter" + "oauthTokenSecret"],
-            callbackId: localStorage["fitbitCompleter" + "callbackId"]
-          },
-          success: function(response) {
-            if (response.success) {
-              localStorage["fitbitCompleter" + "AccessToken"] = response.accessToken;
-              localStorage["fitbitCompleter" + "AccessTokenSecret"] = response.accessTokenSecret;
-              localStorage["fitbitCompleter" + "UserID"] = response.userId;
-            } else {
-              console.log(response.error);
-            }
-          }
-        });
+<head>
+  <title>Home &mdash; Fitbit Completer </title>
+  <link rel="stylesheet" href="steps.css">
+</head>
+<body>
+  <div id="header" class="box">
+    Fitbit Completer
+  </div>
+
+  <div class="content box">
+    Welcome to Fitbit Completer, where you can easily find ways to complete your Fitbit goals!
+  </div>
+
+
+
+  <div id="footer">
+    <div class="tab"><a href="signedin.html">Home</a></div>
+    <div class="tab"><a href="steps.html">Steps</a></div>
+    <div class="tab"><a href="calories.html">Calories</a></div>
+    <div class="tab"><a href="activity.html">Activity</a></div>
+  </div>
+
+  <script src="jquery-1.9.0.js"></script>
+  <script>
+  window.onload = function() {
+    console.log("Hey");
+    $.ajax({
+      type: "get",
+      url: "finalize-fitbit-oauth",
+      data: {
+        oauthTokenSecret: localStorage["fitbitCompleter" + "oauthTokenSecret"],
+        callbackId: localStorage["fitbitCompleter" + "callbackId"]
+      },
+      success: function(response) {
+        if (response.success) {
+          localStorage["fitbitCompleter" + "AccessToken"] = response.accessToken;
+          localStorage["fitbitCompleter" + "AccessTokenSecret"] = response.accessTokenSecret;
+          localStorage["fitbitCompleter" + "UserID"] = response.userId;
+        } else {
+          console.log(response.error);
+        }
+      }
+    });
 
         /*navigator.geolocation.getCurrentPosition(function(position) {
           var myLongitude = position.coords.longitude;
@@ -38,9 +56,9 @@
             },
             dataType: "json"
           });
-        });*/
-      };
-    </script>
-  </body>
+});*/
+};
+</script>
+</body>
 </html>
 
