--- a/static/steps.html
+++ b/static/steps.html
@@ -7,12 +7,11 @@
 
   <link href="reset.css" rel="stylesheet" type="text/css">
   <link href="steps.css" rel="stylesheet" type="text/css">
-  
 </head>
 <body>
   <div id="container">
     <div id="header" class="box">
-      Fitbit Completer
+      <img src="fitbit.png" alt="Fitbit" /> Completer
     </div>
 
     <div id="content" class="box">
