--- a/static/steps.html
+++ b/static/steps.html
@@ -62,7 +62,7 @@
   window.onload = function() {
     $.ajax({
       type: "get",
-      url: "get-steps-data",
+      url: "get-fitbit-data",
       data: {
         accessToken: localStorage["fitbitCompleter" + "AccessToken"],
         accessTokenSecret: localStorage["fitbitCompleter" + "AccessTokenSecret"]
