--- a/static/steps.html
+++ b/static/steps.html
@@ -45,7 +45,7 @@
 
     <div id="footer">
       <div class="tab"><a href="signedin.html">Home</a></div>
-      <div class="tab"><a href="steps.html">Steps</a></div>
+      <div id="current-page" class="tab"><a href="steps.html">Steps</a></div>
       <div class="tab"><a href="calories.html">Calories</a></div>
       <div class="tab"><a href="activity.html">Activity</a></div>
     </div>
