--- a/static/calories.html
+++ b/static/calories.html
@@ -1,27 +1,34 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Calories &mdash; FitbitCompleter</title>
+  <title>Calories &mdash; Fitbit Completer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
   <link rel="stylesheet" href="steps.css">
 </head>
 <body>
+  <div id="container">
+    <div id="header" class="box">
+      <img src="fitbit.png" alt="Fitbit" /> Completer
+    </div>
 
-  <div class="content box">
-    You currently have 
-    <span id="actualCalories"></span>
-    calories toward your goal of
-    <span id="caloriesGoal"></span>
-    calories today. You have
-    <span id="remainingCalories"></span>
-    calories remaining today.
-  </div>
+    <div class="content box">
+      You currently have 
+      <span id="actualCalories"></span>
+      calories toward your goal of
+      <span id="caloriesGoal"></span>
+      calories today. You have
+      <span id="remainingCalories"></span>
+      calories remaining today.
+    </div>
 
-  <div id="footer">
-    <div class="tab"><a href="signedin.html">Home</a></div>
-    <div class="tab"><a href="steps.html">Steps</a></div>
-    <div class="tab"><a href="calories.html">Calories</a></div>
-    <div class="tab"><a href="activity.html">Activity</a></div>
+    <div id="footer">
+      <div class="tab"><a href="signedin.html">Home</a></div>
+      <div class="tab"><a href="steps.html">Steps</a></div>
+      <div id="current-page" class="tab"><a href="calories.html">Calories</a></div>
+      <div class="tab"><a href="activity.html">Activity</a></div>
+    </div>
   </div>
 
   <script src="jquery-1.9.0.js"></script>
