--- a/static/signedin.html
+++ b/static/signedin.html
@@ -2,24 +2,27 @@
 <html>
 <head>
   <title>Home &mdash; Fitbit Completer </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
   <link rel="stylesheet" href="steps.css">
 </head>
 <body>
-  <div id="header" class="box">
-    Fitbit Completer
-  </div>
+  <div id="container">
+    <div id="header" class="box">
+      <img src="fitbit.png" alt="Fitbit" /> Completer
+    </div>
 
-  <div class="content box">
-    Welcome to Fitbit Completer, where you can easily find ways to complete your Fitbit goals!
-  </div>
+    <div class="content box">
+      Welcome to Fitbit Completer, where you can easily find ways to complete your Fitbit goals!
+    </div>
 
-
-
-  <div id="footer">
-    <div class="tab"><a href="signedin.html">Home</a></div>
-    <div class="tab"><a href="steps.html">Steps</a></div>
-    <div class="tab"><a href="calories.html">Calories</a></div>
-    <div class="tab"><a href="activity.html">Activity</a></div>
+    <div id="footer">
+      <div id="current-page" class="tab"><a href="signedin.html">Home</a></div>
+      <div class="tab"><a href="steps.html">Steps</a></div>
+      <div class="tab"><a href="calories.html">Calories</a></div>
+      <div class="tab"><a href="activity.html">Activity</a></div>
+    </div>
   </div>
 
   <script src="jquery-1.9.0.js"></script>
