--- a/static/signedin.html
+++ b/static/signedin.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-  <link rel="stylesheet" href="steps.css">
+  <link href="reset.css" rel="stylesheet" type="text/css">
+  <link href="steps.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div id="container">
