--- a/static/signedin.html
+++ b/static/signedin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+
     <link href="reset.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
@@ -13,6 +14,7 @@
       <div id="header" class="box">
         <img src="fitbit.png" alt="Fitbit" /> Completer
       </div>
+
 
       <div class="content box">
         <p>Welcome to Fitbit Completer, where you can easily find ways to complete your Fitbit goals.</p>
@@ -29,39 +31,92 @@
         </p>
       </div>
 
-      <div id="footer">
-        <div id="current-page" class="tab"><a href="signedin.html">Home</a></div>
-        <div class="tab"><a href="steps.html">Steps</a></div>
-        <div class="tab"><a href="calories.html">Calories</a></div>
-        <div class="tab"><a href="activity.html">Activity</a></div>
-      </div>
+
+    <div class="content box">
+      <a href="steps.html" class="content box">
+        You currently have 
+        <span id="remainingSteps"></span>
+        steps remaining for your daily goal.
+      </a>
+      <a href="calories.html" class="content box">
+        You currently have
+        <span id="remainingCalories"></span>
+        calories remaining for your daily goal.
+      </a>
+      <a href="activity.html" class="content box">
+        Touch here to find activities to unlock extra calories.
+      </a>
     </div>
 
-    <script src="jquery-1.9.0.js"></script>
-    <script>
-    window.onload = function() {
-      console.log("Hey");
+    <div id="footer">
+      <div id="current-page" class="tab"><a href="signedin.html">Home</a></div>
+      <div class="tab"><a href="steps.html">Steps</a></div>
+      <div class="tab"><a href="calories.html">Calories</a></div>
+      <div class="tab"><a href="activity.html">Activity</a></div>
+
+    </div>
+
+
+  <script src="jquery-1.9.0.js"></script>
+  <script>
+  var g = {};
+
+  window.onload = function() {
+    console.log("Hey");
+    $.ajax({
+      type: "get",
+      url: "finalize-fitbit-oauth",
+      data: {
+        oauthTokenSecret: localStorage["fitbitCompleter" + "oauthTokenSecret"],
+        callbackId: localStorage["fitbitCompleter" + "callbackId"]
+      },
+      success: function(response) {
+        if (response.success) {
+          localStorage["fitbitCompleter" + "AccessToken"] = response.accessToken;
+          localStorage["fitbitCompleter" + "AccessTokenSecret"] = response.accessTokenSecret;
+          localStorage["fitbitCompleter" + "UserID"] = response.userId;
+        } else {
+          console.log(response.error);
+        }
+
+        getFitbitData();
+      }
+    });
+
+    function getFitbitData(){
       $.ajax({
         type: "get",
-        url: "finalize-fitbit-oauth",
-        data: {
-          oauthTokenSecret: localStorage["fitbitCompleter" + "oauthTokenSecret"],
-          callbackId: localStorage["fitbitCompleter" + "callbackId"]
-        },
-        success: function(response) {
-          if (response.success) {
-            localStorage["fitbitCompleter" + "AccessToken"] = response.accessToken;
-            localStorage["fitbitCompleter" + "AccessTokenSecret"] = response.accessTokenSecret;
-            localStorage["fitbitCompleter" + "UserID"] = response.userId;
-          } else {
-            console.log(response.error);
+        url: "get-fitbit-data",
+        success: function(response){
+          if(response.success){
+            g.caloriesGoal = response.caloriesGoal;
+            g.actualCalories = response.actualCalories;
+            g.goalSteps = response.goalSteps;
+            g.actualSteps = response.actualSteps;
           }
+          else{
+            g.caloriesGoal = 2000;
+            g.actualCalories = 200;
+            g.goalSteps = 5000;
+            g.actualSteps = 500;
+          }
+
+          displayUserData();
         }
       });
+    }
 
-          /*navigator.geolocation.getCurrentPosition(function(position) {
-            var myLongitude = position.coords.longitude;
-            var myLatitude = position.coords.latitude;
+    function displayUserData(){
+      var sSpan = $("#remainingSteps");
+      var cSpan = $("#remainingCalories");
+
+      sSpan.html(g.goalSteps - g.actualSteps);
+      cSpan.html(g.caloriesGoal - g.actualCalories);
+    }
+
+        /*navigator.geolocation.getCurrentPosition(function(position) {
+          var myLongitude = position.coords.longitude;
+          var myLatitude = position.coords.latitude;
 
             $.ajax({
               type: "get",
